--- a/raw_ui/edit.ui
+++ b/raw_ui/edit.ui
@@ -26,7 +26,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QTableView" name="tableView">
+  <widget class="QTableView" name="tableEditView">
    <property name="geometry">
     <rect>
      <x>20</x>
