--- a/raw_ui/create.ui
+++ b/raw_ui/create.ui
@@ -26,40 +26,45 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QTableView" name="tableView">
+  <widget class="QTextEdit" name="textCreate">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
-     <width>361</width>
-     <height>221</height>
+     <y>120</y>
+     <width>341</width>
+     <height>70</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>210</y>
-     <width>51</width>
-     <height>23</height>
+     <x>80</x>
+     <y>30</y>
+     <width>261</width>
+     <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>22</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string>+</string>
+    <string>Input new value</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>210</y>
-     <width>51</width>
-     <height>23</height>
+     <x>80</x>
+     <y>60</y>
+     <width>161</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>x</string>
+    <string>Example: val1;val2;val3</string>
    </property>
   </widget>
  </widget>
