--- a/raw_ui/lab8.ui
+++ b/raw_ui/lab8.ui
@@ -61,19 +61,6 @@
      <string>Table info</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>430</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Query</string>
-    </property>
-   </widget>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="geometry">
      <rect>
@@ -87,23 +74,13 @@
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
-   <widget class="QTextEdit" name="queryEdit">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>479</y>
-      <width>731</width>
-      <height>51</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QTableView" name="tableInfoView">
     <property name="geometry">
      <rect>
       <x>280</x>
       <y>90</y>
       <width>471</width>
-      <height>331</height>
+      <height>391</height>
      </rect>
     </property>
    </widget>
@@ -113,7 +90,7 @@
       <x>20</x>
       <y>90</y>
       <width>201</width>
-      <height>331</height>
+      <height>391</height>
      </rect>
     </property>
    </widget>
@@ -149,6 +126,32 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>510</y>
+      <width>57</width>
+      <height>15</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Status:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="status_label">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>510</y>
+      <width>57</width>
+      <height>15</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
    </widget>
   </widget>
  </widget>
